src/test/ui/issues/issue-33571.stderr
error: this unsafe trait should be implemented explicitly
  --> $DIR/issue-33571.rs:12:10
   |
LL |          Sync, //~ ERROR this unsafe trait should be implemented explicitly
   |          ^^^^

error: aborting due to previous error

